--- a/multi-agent-collab.ipynb
+++ b/multi-agent-collab.ipynb
@@ -21,12 +21,106 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "abfa4f28-20b3-4d6c-9f63-feddb69df1eb",
+   "metadata": {},
+   "source": [
+    "## Create Agents\n",
+    "\n",
+    "The following helper function will help create agents. These agents will then be nodes in the graph."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "bb8c72a3-f151-44bc-b3aa-f1599ebd44b5",
+   "execution_count": 10,
+   "id": "7cb86ca1-14d6-49ba-baf8-7d88cd24df44",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from langchain_core.messages import (\n",
+    "    BaseMessage,\n",
+    "    HumanMessage,\n",
+    "    ToolMessage,\n",
+    ")\n",
+    "from langchain_core.prompts import (\n",
+    "    ChatPromptTemplate, \n",
+    "    MessagesPlaceholder,\n",
+    ")\n",
+    "from langchain_core.language_models.chat_models import BaseChatModel\n",
+    "from langchain_core.tools import BaseTool\n",
+    "from langchain_core.runnables import RunnableSequence\n",
+    "\n",
+    "\n",
+    "def create_agent(\n",
+    "    model: BaseChatModel, \n",
+    "    tools: list[BaseTool], \n",
+    "    system_message: str\n",
+    ") -> RunnableSequence:\n",
+    "    \"\"\"\n",
+    "    Create an agent.\n",
+    "\n",
+    "    Args:\n",
+    "        model: The LLM that powers this agent.\n",
+    "        tools: List of tools to be called by the LLM.\n",
+    "        system_message: The system message passed to the LLM \n",
+    "            to configure its behaviour.\n",
+    "\n",
+    "    Returns:\n",
+    "        A chain that can be invoked.\n",
+    "    \"\"\"\n",
+    "    prompt = ChatPromptTemplate.from_messages(\n",
+    "        [\n",
+    "            (\n",
+    "                \"system\",\n",
+    "                \"You are a helpful AI assistant, \"\n",
+    "                \"collaborating with other assistants. \"\n",
+    "                \"Use the provided tools to progress \"\n",
+    "                \"towards answering the question. \"\n",
+    "                \"If you are unable to fully answer, \"\n",
+    "                \"that's OK, another assistant with \"\n",
+    "                \"different tools will help where \"\n",
+    "                \"you left off. Execute what you can \"\n",
+    "                \"to make progress. If you or any of \"\n",
+    "                \"the other assistants have the \"\n",
+    "                \"final answer or deliverable, \"\n",
+    "                \"prefix your response with FINAL ANSWER \"\n",
+    "                \"so the team knows to stop. \"\n",
+    "                \"You have access to the following tools: {tool_names}.\"\n",
+    "                \"\\n\\n\"\n",
+    "                \"{system_message}\",\n",
+    "            ),\n",
+    "            MessagesPlaceholder(\n",
+    "                variable_name=\"messages\"\n",
+    "            ),\n",
+    "        ]\n",
+    "    )\n",
+    "    prompt = prompt.partial(\n",
+    "        system_message=system_message\n",
+    "    )\n",
+    "    prompt = prompt.partial(\n",
+    "        tool_names=\", \".join(\n",
+    "            tool.name for tool in tools\n",
+    "        )\n",
+    "    )\n",
+    "    return (\n",
+    "        prompt \n",
+    "        | model.bind_tools(tools)\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7059706d-d8a3-44f5-aeef-d37ad74d60df",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langgraph.graph import (\n",
+    "    START,\n",
+    "    END, \n",
+    "    StateGraph, \n",
+    ")\n"
+   ]
   }
  ],
  "metadata": {
