Add "Setup" section
Load environment variables (e.g., API keys)
using `dotenv`.

--- a/multi-agent-collab.ipynb
+++ b/multi-agent-collab.ipynb
@@ -22,6 +22,35 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f8dd4fa3-a216-44b9-9923-9097dbae46d2",
+   "metadata": {},
+   "source": [
+    "## Setup\n",
+    "\n",
+    "Before we begin, please make sure you have setup the `.env` file in the project \n",
+    "directory as described in [`README.md`](README.md).\n",
+    "\n",
+    "Next, we will load in the necessary environment variables (e.g., API keys) for this notebook:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "980343ae-4ac0-425a-92c7-41e099568340",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "from dotenv import load_dotenv\n",
+    "\n",
+    "_ = load_dotenv()\n",
+    "\n",
+    "assert os.environ.get(\"GOOGLE_API_KEY\")\n",
+    "assert os.environ.get(\"TAVILY_API_KEY\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "abfa4f28-20b3-4d6c-9f63-feddb69df1eb",
    "metadata": {},
    "source": [
@@ -32,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "7cb86ca1-14d6-49ba-baf8-7d88cd24df44",
    "metadata": {},
    "outputs": [],
@@ -121,6 +150,38 @@
     "    StateGraph, \n",
     ")\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d875f3d4-5984-457e-9b30-d43aacc5e6be",
+   "metadata": {},
+   "source": [
+    "## Define tools\n",
+    "\n",
+    "We will also define some tools that our agents will use in the future"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "52ce66d1-929c-4c55-b030-eed8a26d3e27",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "from langchain_community.tools.tavily_search import TavilySearchResults\n",
+    "\n",
+    "web_search_tool = TavilySearchResults(max_results=3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e24923f2-7669-41e0-90b7-34a52f921c42",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
