Define class to keep track of state of graph

--- a/multi-agent-collab.ipynb
+++ b/multi-agent-collab.ipynb
@@ -391,9 +391,49 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7c05aba2-88fb-4bf8-a34b-af1bef5047b8",
+   "metadata": {},
+   "source": [
+    "## Create graph\n",
+    "\n",
+    "After we've defined the tools for the agents, we'll create the agents and tell them how to talk to each other using LangGraph.\n",
+    "\n",
+    "### Define State\n",
+    "\n",
+    "First define the state of the graph. This will just be a list of messages, and a key to track the most recent sender."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "1e04f68d-6d77-46b0-9b9a-7b79ce448e06",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import operator\n",
+    "from typing import (\n",
+    "    Annotated, \n",
+    "    Sequence, \n",
+    "    TypedDict\n",
+    ")\n",
+    "\n",
+    "\n",
+    "# This defines the object that is passed between each node\n",
+    "# in the graph. We will create different nodes for each \n",
+    "# agent and tool.\n",
+    "class AgentState(TypedDict):\n",
+    "    messages: Annotated[\n",
+    "        Sequence[BaseMessage], \n",
+    "        operator.add\n",
+    "    ]\n",
+    "    sender: str"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8be7a18c-c9bb-4805-848e-5e0f9272f2b2",
+   "id": "b58be326-44f8-40cd-bfa8-5579a3319cd7",
    "metadata": {},
    "outputs": [],
    "source": []
