Create agent nodes
- Create researcher agent node
- Create chart generator agent node

--- a/multi-agent-collab.ipynb
+++ b/multi-agent-collab.ipynb
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "7cb86ca1-14d6-49ba-baf8-7d88cd24df44",
    "metadata": {},
    "outputs": [],
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "7059706d-d8a3-44f5-aeef-d37ad74d60df",
    "metadata": {},
    "outputs": [],
@@ -151,7 +151,7 @@
     "    START,\n",
     "    END, \n",
     "    StateGraph, \n",
-    ")\n"
+    ")"
    ]
   },
   {
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 5,
    "id": "0b23d5f0-4b1f-48db-bc7b-9adaad8c7460",
    "metadata": {},
    "outputs": [],
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 6,
    "id": "25747572-f7ff-4130-ac45-b78b77bf4554",
    "metadata": {},
    "outputs": [
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 7,
    "id": "4436f581-e75d-4dea-9a03-940c0279756b",
    "metadata": {},
    "outputs": [
@@ -334,7 +334,7 @@
        " 'required': ['x', 'y', 'title', 'x_label', 'y_label']}"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 8,
    "id": "27414e8f-2041-45f5-b9f9-960c00bdf391",
    "metadata": {},
    "outputs": [
@@ -370,10 +370,10 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x13fe50690>]"
+       "[<matplotlib.lines.Line2D at 0x10ce03c50>]"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 9,
    "id": "1e04f68d-6d77-46b0-9b9a-7b79ce448e06",
    "metadata": {},
    "outputs": [],
@@ -431,9 +431,187 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "429ab881-d2b7-492d-a1c7-5997db01726b",
+   "metadata": {},
+   "source": [
+    "### Define Agent Nodes\n",
+    "\n",
+    "Next, let's define the nodes for the agents. To make things easier, we'll create a helper function to create a node for a given agent."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "b9d826eb-12a0-41b2-aa5c-8e634d39154d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import Any\n",
+    "\n",
+    "from langchain_core.messages import AIMessage\n",
+    "from langchain_core.runnables import Runnable\n",
+    "from langchain.pydantic_v1 import BaseModel\n",
+    "\n",
+    "\n",
+    "def agent_node(\n",
+    "    state: AgentState, \n",
+    "    agent: Runnable, \n",
+    "    name: str\n",
+    ") -> AgentState:\n",
+    "    \"\"\"\n",
+    "    Create a node on the graph for a given agent.\n",
+    "\n",
+    "    Args:\n",
+    "        state: Current state of the graph.\n",
+    "        agent: The agent that can be invoked to get a result.\n",
+    "        name: The name of the node in the graph.\n",
+    "        \n",
+    "    Returns:\n",
+    "        New state of the graph.\n",
+    "    \"\"\"\n",
+    "    result: [ToolMessage | BaseModel] = agent.invoke(state)\n",
+    "    \n",
+    "    # Convert the agent output into a format that \n",
+    "    # is suitable to append to the global state\n",
+    "    if isinstance(result, ToolMessage):\n",
+    "        pass\n",
+    "    else:        \n",
+    "        result_dict = result.dict(\n",
+    "            exclude={\"type\", \"name\"}\n",
+    "        )\n",
+    "        result = AIMessage(\n",
+    "            **result_dict, \n",
+    "            name=name\n",
+    "        )\n",
+    "\n",
+    "    return AgentState(\n",
+    "        messages=[result],\n",
+    "        \n",
+    "        # Keep track of the agent that sent \n",
+    "        # the most recent message, so that we \n",
+    "        # know who to route to next.\n",
+    "        sender=name,\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5f9c4cec-24b5-4159-b612-857b947ee035",
+   "metadata": {},
+   "source": [
+    "Create the chat model (LLM) that will power the agents:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "85784783-c5a8-41a7-99f8-27b7cd46b7a5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain_google_genai import ChatGoogleGenerativeAI\n",
+    "\n",
+    "llm = ChatGoogleGenerativeAI(\n",
+    "    model=\"gemini-1.5-flash\",\n",
+    "    temperature=0,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9bf802df-3699-40ea-be3f-f40b4bc14de7",
+   "metadata": {},
+   "source": [
+    "#### Research Agent\n",
+    "\n",
+    "Create the research agent and its node in the graph. The research agent is responsible for searching for answers on the web using the provided web search tool."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "e9add4b6-1c94-4912-a189-aa4a24d3367f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Key 'title' is not supported in schema, ignoring\n",
+      "Key 'title' is not supported in schema, ignoring\n"
+     ]
+    }
+   ],
+   "source": [
+    "from functools import partial\n",
+    "\n",
+    "research_agent = create_agent(\n",
+    "    model=llm,\n",
+    "    tools=[web_search_tool],\n",
+    "    system_message=(\n",
+    "        \"Given the user's query, your task is to use \"\n",
+    "        \"the provided tool to search the web for \"\n",
+    "        \"relevant answers. Provide accurate data \"\n",
+    "        \"for another AI assistant to plot a chart.\"\n",
+    "    ),\n",
+    ")\n",
+    "research_agent_node = partial(\n",
+    "    agent_node, \n",
+    "    agent=research_agent, \n",
+    "    name=\"researcher\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "621476f5-d8d6-4fdd-a84c-52473bcf6467",
+   "metadata": {},
+   "source": [
+    "#### Chart Generator Agent\n",
+    "\n",
+    "Create the chart generator agent and its node in the graph. Given the relevant data, the chart generator agent will plot a chart with the provided function/tool."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "dd52e130-3db6-4bac-a2f1-f516fb21300c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Key 'title' is not supported in schema, ignoring\n",
+      "Key 'title' is not supported in schema, ignoring\n",
+      "Key 'title' is not supported in schema, ignoring\n",
+      "Key 'title' is not supported in schema, ignoring\n",
+      "Key 'title' is not supported in schema, ignoring\n",
+      "Key 'title' is not supported in schema, ignoring\n"
+     ]
+    }
+   ],
+   "source": [
+    "chart_agent = create_agent(\n",
+    "    model=llm,\n",
+    "    tools=[plot_line_chart],\n",
+    "    system_message=(        \n",
+    "        \"Given the relevant data, use the provided \"\n",
+    "        \"tool to plot a chart of the data.\"\n",
+    "    )\n",
+    ")\n",
+    "chart_agent_node = partial(\n",
+    "    agent_node, \n",
+    "    agent=chart_agent, \n",
+    "    name=\"chart_generator\"\n",
+    ")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b58be326-44f8-40cd-bfa8-5579a3319cd7",
+   "id": "58a48799-6c6d-43ea-972c-257528c9c009",
    "metadata": {},
    "outputs": [],
    "source": []
