Create tool node
Define node to run the tools.

--- a/multi-agent-collab.ipynb
+++ b/multi-agent-collab.ipynb
@@ -609,9 +609,44 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8a66d11b-4fd9-4946-b9d2-31f970828564",
+   "metadata": {},
+   "source": [
+    "### Define Tool Node\n",
+    "\n",
+    "Define a node to run the tools."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "1ac4d8c5-2402-4e93-9a52-83641ebcea34",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langgraph.prebuilt import ToolNode\n",
+    "\n",
+    "tool_node = ToolNode(\n",
+    "    tools=[\n",
+    "        web_search_tool, \n",
+    "        plot_line_chart\n",
+    "    ]\n",
+    ")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "58a48799-6c6d-43ea-972c-257528c9c009",
+   "id": "5ba4a40b-2c64-4c6b-9e07-e93ad8c47d27",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "64f74378-e329-418f-89f3-82967f58eebf",
    "metadata": {},
    "outputs": [],
    "source": []
