--- a/multi-agent-collab.ipynb
+++ b/multi-agent-collab.ipynb
@@ -615,7 +615,7 @@
    "source": [
     "### Define Tool Node\n",
     "\n",
-    "Define a node to run the tools."
+    "Define a node to run the tools used by the agents."
    ]
   },
   {
