Invoke the graph
Invoke the graph and stream events to the console

--- a/multi-agent-collab.ipynb
+++ b/multi-agent-collab.ipynb
@@ -356,7 +356,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x11fb5af10>]"
+       "[<matplotlib.lines.Line2D at 0x1177b8090>]"
       ]
      },
      "execution_count": 7,
@@ -688,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 15,
    "id": "155efda7-9633-406d-9fd1-23ef739a541f",
    "metadata": {},
    "outputs": [],
@@ -758,7 +758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 16,
    "id": "a2e3cfa8-803c-4a54-ac40-5cc3fd6da0f3",
    "metadata": {},
    "outputs": [
@@ -784,12 +784,46 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "27bc2cea-b8b0-40f8-bd6a-a382877a2989",
+   "metadata": {},
+   "source": [
+    "## Invoke\n",
+    "\n",
+    "After we have built the graph, we can now invoke it. Let's have it plot a chart for us:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14b28a54-1f87-4fd0-a33e-43b915eafeee",
+   "id": "adc03371-8306-4da6-810e-8434a8a77811",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "events = graph.stream(\n",
+    "    input={\n",
+    "        \"messages\": [\n",
+    "            HumanMessage(\n",
+    "                content=(\n",
+    "                    \"1. Fetch the average temperature in \"\n",
+    "                    \"Kuala Lumpur for the past 7 days.\\n\"\n",
+    "                    \"2. Plot a chart of the temperature (y-axis) \"\n",
+    "                    \"vs date (x-axis).\\n\"                    \n",
+    "                )\n",
+    "            )\n",
+    "        ],\n",
+    "    },\n",
+    "    config={\n",
+    "        # Maximum number of steps to\n",
+    "        # take in the graph\n",
+    "        \"recursion_limit\": 150\n",
+    "    },\n",
+    ")\n",
+    "\n",
+    "for s in events:\n",
+    "    print(s)\n",
+    "    print(\"----\")"
+   ]
   }
  ],
  "metadata": {
