Update definition for state of graph
- Include key for a stock's historical data
- Add docstring for the keys

--- a/multi-agent-collab.ipynb
+++ b/multi-agent-collab.ipynb
@@ -633,12 +633,14 @@
     "\n",
     "### Define State\n",
     "\n",
-    "First define the state of the graph. This will just be a list of messages, and a key to track the most recent sender."
+    "First define the state of the graph. This will be a list of messages, a key to track the most recent sender, and a pandas `DataFrame` containing a stock's historical data.\n",
+    "\n",
+    "> See also: [LangGraph Concepts > State](https://langchain-ai.github.io/langgraph/concepts/low_level/#state)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 37,
    "id": "1e04f68d-6d77-46b0-9b9a-7b79ce448e06",
    "metadata": {},
    "outputs": [],
@@ -651,15 +653,21 @@
     ")\n",
     "\n",
     "\n",
-    "# This defines the object that is passed between each node\n",
-    "# in the graph. We will create different nodes for each \n",
-    "# agent and tool.\n",
     "class AgentState(TypedDict):\n",
+    "    \"\"\"\n",
+    "    Schema of the graph representing the graph's state.\n",
+    "    \"\"\"\n",
     "    messages: Annotated[\n",
     "        Sequence[BaseMessage], \n",
     "        operator.add\n",
     "    ]\n",
-    "    sender: str"
+    "    \"\"\"List of messages that will be accumulated.\"\"\"\n",
+    "    \n",
+    "    sender: str\n",
+    "    \"\"\"The most recent node that sent this state.\"\"\"\n",
+    "    \n",
+    "    stock_data: pd.DataFrame\n",
+    "    \"\"\"Pandas DataFrame containing historical data of a stock.\"\"\""
    ]
   },
   {
