Change chart generator agent
- Assign new `plot_chart` tool to agent
- Change system message for agent

--- a/multi-agent-collab.ipynb
+++ b/multi-agent-collab.ipynb
@@ -813,12 +813,12 @@
    "source": [
     "#### Chart Generator Agent\n",
     "\n",
-    "Create the chart generator agent and its node in the graph. Given the relevant data, the chart generator agent will plot a chart with the provided function/tool."
+    "Create the agent that will plot a chart of the stock data. Also, create a node in the graph for this agent."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 22,
    "id": "dd52e130-3db6-4bac-a2f1-f516fb21300c",
    "metadata": {},
    "outputs": [
@@ -827,25 +827,24 @@
      "output_type": "stream",
      "text": [
       "Key 'title' is not supported in schema, ignoring\n",
-      "Key 'title' is not supported in schema, ignoring\n",
-      "Key 'title' is not supported in schema, ignoring\n",
-      "Key 'title' is not supported in schema, ignoring\n",
-      "Key 'title' is not supported in schema, ignoring\n",
-      "Key 'title' is not supported in schema, ignoring\n",
       "Key 'title' is not supported in schema, ignoring\n"
      ]
     }
    ],
    "source": [
     "chart_agent = create_agent(\n",
-    "    model=llm,\n",
-    "    tools=[plot_time_series],\n",
-    "    system_message=(        \n",
-    "        \"Given the relevant data, use the provided \"\n",
-    "        \"tool to plot a chart of the data.\"\n",
-    "    )\n",
+    "    model=chat_model,\n",
+    "    tools=[\n",
+    "        plot_chart\n",
+    "    ],\n",
+    "    system_message=(\n",
+    "        \"You will be provided with the historical \"\n",
+    "        \"data of a stock. Your only task is to \"\n",
+    "        \"plot a chart of this data.\"\n",
+    "    ),\n",
     ")\n",
-    "chart_agent_node = partial(\n",
+    "\n",
+    "chart_generator_node = partial(\n",
     "    agent_node, \n",
     "    agent=chart_agent, \n",
     "    name=\"chart_generator\"\n",
