Add custom tool node
- Custom tool node wraps around LangGraph's
built-in `ToolNode`
- Adds a key `stock_data` to the graph's state
that maps to a pandas `DataFrame`.

--- a/multi-agent-collab.ipynb
+++ b/multi-agent-collab.ipynb
@@ -863,7 +863,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 23,
    "id": "1ac4d8c5-2402-4e93-9a52-83641ebcea34",
    "metadata": {},
    "outputs": [],
@@ -872,10 +872,58 @@
     "\n",
     "tool_node = ToolNode(\n",
     "    tools=[\n",
-    "        web_search_tool, \n",
-    "        plot_time_series\n",
+    "        get_historical_stock_data, \n",
+    "        plot_chart\n",
     "    ]\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "65ab42c3-35b6-45d8-b975-236ddbcc929a",
+   "metadata": {},
+   "source": [
+    "LangGraph's built-in `ToolNode` only updates the `messages` key in a graph's state. So, we need to build a custom tool node that also updates the `stock_data` key that maps to a pandas `DataFrame` containing the historical stock data."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "ff5f32c1-fcf2-4003-b1a7-d83fd9c8e622",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def custom_tool_node(\n",
+    "    tool_node: ToolNode,\n",
+    "    input_state: AgentState\n",
+    ") -> AgentState:\n",
+    "    \"\"\"\n",
+    "    Custom tool node that wraps a LangGraph's \n",
+    "    built-in `ToolNode` to update additional keys \n",
+    "    in the graph's state.\n",
+    "    \n",
+    "    This custom tool node updates the state of \n",
+    "    the graph to include a reference to a pandas\n",
+    "    DataFrame containing the historical stock data.\n",
+    "\n",
+    "    Args:\n",
+    "        tool_node: LangGraph's built-in `ToolNode`.\n",
+    "        input_state: The current state of the graph.\n",
+    "\n",
+    "    Returns:\n",
+    "        A new state of the graph that includes a \n",
+    "        key `stock_data` that maps to a pandas DataFrame.\n",
+    "    \"\"\"\n",
+    "    output_state: AgentState = tool_node.invoke(input_state)\n",
+    "    messages: Sequence[ToolMessage] = output_state[\"messages\"]\n",
+    "\n",
+    "    # If the tool returns a  pandas DataFrame, \n",
+    "    # then save it as the graph's state\n",
+    "    for tool_message in messages:\n",
+    "        if isinstance(tool_message.artifact, pd.DataFrame):\n",
+    "            output_state[\"stock_data\"] = tool_message.artifact\n",
+    "            \n",
+    "    return output_state"
    ]
   },
   {
