--- a/multi-agent-collab.ipynb
+++ b/multi-agent-collab.ipynb
@@ -148,14 +148,37 @@
     "\n",
     "We will also define some tools that our agents will use.\n",
     "\n",
-    "### Fetch historical stock data tool\n",
     "\n",
-    "This tool is used by the `stock_researcher` agent to fetch historical data for a given stock's ticker symbol. This tool uses the [`yfinance`](https://github.com/ranaroussi/yfinance) library to download market data from [Yahoo! finance](https://finance.yahoo.com/)."
+    "### Key-Value Store\n",
+    "\n",
+    "The stock data will be downloaded as a pandas `DataFrame`. There is no easy way to pass a `DataFrame` between the agents. So, we'll need a key-value store to store the downloaded stock data and later retrieve it using just a key (string).\n",
+    "\n",
+    "> LangChain Concepts: [Key-value stores](https://python.langchain.com/v0.2/docs/concepts/#key-value-stores)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "b18ed913-1525-4a5a-8df4-85ac1f9a3947",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain_core.stores import InMemoryStore\n",
+    "\n",
+    "data_store = InMemoryStore()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "697190c5-b37c-4ebf-9b8c-c90ec25b3744",
+   "metadata": {},
+   "source": [
+    "Create a `Stock` data class to represent the downloaded stock data:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "176f63dc-17d2-4edd-9c72-eb9366772b10",
    "metadata": {},
    "outputs": [],
@@ -192,15 +215,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "b18ed913-1525-4a5a-8df4-85ac1f9a3947",
+   "cell_type": "markdown",
+   "id": "a1dd21b3-7ca4-4835-84fc-95dc557a9772",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "from langchain_core.stores import InMemoryStore\n",
+    "### Fetch historical stock data tool\n",
     "\n",
-    "data_store = InMemoryStore()"
+    "This tool is used by the `stock_researcher` agent to fetch historical data for a given stock's ticker symbol. This tool uses the [`yfinance`](https://github.com/ranaroussi/yfinance) library to download market data from [Yahoo! finance](https://finance.yahoo.com/)."
    ]
   },
   {
@@ -235,10 +256,9 @@
     "    stock ticker symbol.\n",
     "\n",
     "    Example:\n",
-    "        .. code-block:: python\n",
-    "\n",
-    "            # fetch historical stock data for Apple Inc\n",
-    "            get_historical_stock_data('AAPL')\n",
+    "    \n",
+    "        # fetch historical stock data for Apple Inc\n",
+    "        get_historical_stock_data('AAPL')\n",
     "    \"\"\"\n",
     "    # download the stock data from Yahoo! Finance\n",
     "    stock_data = yf.Ticker(ticker_symbol)\n",
@@ -330,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "id": "40900a4b-f1a9-4154-800e-223237f1d141",
    "metadata": {},
    "outputs": [
@@ -340,7 +360,7 @@
        "Stock(ticker_symbol='SPY', name='SPDR S&P 500')"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -352,32 +372,116 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "id": "06f2b2a6-4cbe-47a1-b41f-79de715e03db",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "DatetimeIndex: 64 entries, 2024-05-30 00:00:00-04:00 to 2024-08-29 00:00:00-04:00\n",
-      "Data columns (total 5 columns):\n",
-      " #   Column  Non-Null Count  Dtype  \n",
-      "---  ------  --------------  -----  \n",
-      " 0   Open    64 non-null     float64\n",
-      " 1   High    64 non-null     float64\n",
-      " 2   Low     64 non-null     float64\n",
-      " 3   Close   64 non-null     float64\n",
-      " 4   Volume  64 non-null     int64  \n",
-      "dtypes: float64(4), int64(1)\n",
-      "memory usage: 3.0 KB\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Open</th>\n",
+       "      <th>High</th>\n",
+       "      <th>Low</th>\n",
+       "      <th>Close</th>\n",
+       "      <th>Volume</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2024-08-23 00:00:00-04:00</th>\n",
+       "      <td>559.530029</td>\n",
+       "      <td>563.090027</td>\n",
+       "      <td>557.289978</td>\n",
+       "      <td>562.130005</td>\n",
+       "      <td>50639400</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-08-26 00:00:00-04:00</th>\n",
+       "      <td>563.179993</td>\n",
+       "      <td>563.909973</td>\n",
+       "      <td>559.049988</td>\n",
+       "      <td>560.789978</td>\n",
+       "      <td>35788600</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-08-27 00:00:00-04:00</th>\n",
+       "      <td>559.489990</td>\n",
+       "      <td>562.059998</td>\n",
+       "      <td>558.320007</td>\n",
+       "      <td>561.559998</td>\n",
+       "      <td>32693900</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-08-28 00:00:00-04:00</th>\n",
+       "      <td>561.210022</td>\n",
+       "      <td>561.650024</td>\n",
+       "      <td>555.039978</td>\n",
+       "      <td>558.299988</td>\n",
+       "      <td>41066000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-08-29 00:00:00-04:00</th>\n",
+       "      <td>560.309998</td>\n",
+       "      <td>563.679993</td>\n",
+       "      <td>557.179993</td>\n",
+       "      <td>558.349976</td>\n",
+       "      <td>38681700</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                 Open        High         Low       Close  \\\n",
+       "Date                                                                        \n",
+       "2024-08-23 00:00:00-04:00  559.530029  563.090027  557.289978  562.130005   \n",
+       "2024-08-26 00:00:00-04:00  563.179993  563.909973  559.049988  560.789978   \n",
+       "2024-08-27 00:00:00-04:00  559.489990  562.059998  558.320007  561.559998   \n",
+       "2024-08-28 00:00:00-04:00  561.210022  561.650024  555.039978  558.299988   \n",
+       "2024-08-29 00:00:00-04:00  560.309998  563.679993  557.179993  558.349976   \n",
+       "\n",
+       "                             Volume  \n",
+       "Date                                 \n",
+       "2024-08-23 00:00:00-04:00  50639400  \n",
+       "2024-08-26 00:00:00-04:00  35788600  \n",
+       "2024-08-27 00:00:00-04:00  32693900  \n",
+       "2024-08-28 00:00:00-04:00  41066000  \n",
+       "2024-08-29 00:00:00-04:00  38681700  "
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "test_stock.historical_data.info()\n",
-    "del test_stock"
+    "test_stock.historical_data.tail()"
    ]
   },
   {
@@ -392,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "id": "7d9c7db9-8dd9-41e7-8bc5-b15c4a5856a3",
    "metadata": {},
    "outputs": [],
@@ -405,7 +509,7 @@
     "    key: Annotated[\n",
     "        str, \n",
     "        \"A unique key used to retrieve a \"\n",
-    "        \"Stock object from the data store.\"\n",
+    "        \"`Stock` object from the data store.\"\n",
     "    ]\n",
     ") -> str:\n",
     "    \"\"\"\n",
@@ -415,6 +519,12 @@
     "    object from the data store. Each `Stock` \n",
     "    object is associated with a unique key in \n",
     "    the data store.\n",
+    "\n",
+    "    Example:\n",
+    "\n",
+    "        # Get `Stock` object associated with key `SPY` and\n",
+    "        # plots a chart of the stock's historical data.\n",
+    "        plot_chart(key=\"SPY\")\n",
     "    \"\"\"\n",
     "    # get the Stock object that was saved \n",
     "    # earlier from the key-value store\n",
@@ -447,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
    "id": "e5ffc519-cb8b-4056-8018-cb64d1541599",
    "metadata": {},
    "outputs": [
@@ -480,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 20,
    "id": "86414791-7314-4d9d-8600-174f3f0a1d5f",
    "metadata": {},
    "outputs": [
@@ -490,7 +600,7 @@
        "ToolMessage(content='Finished plotting chart for `SPY`.', name='plot_chart', tool_call_id='123')"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -519,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 21,
    "id": "1e04f68d-6d77-46b0-9b9a-7b79ce448e06",
    "metadata": {},
    "outputs": [],
@@ -558,7 +668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 22,
    "id": "85784783-c5a8-41a7-99f8-27b7cd46b7a5",
    "metadata": {},
    "outputs": [],
@@ -581,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 23,
    "id": "b9d826eb-12a0-41b2-aa5c-8e634d39154d",
    "metadata": {},
    "outputs": [],
@@ -645,7 +755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 24,
    "id": "e9add4b6-1c94-4912-a189-aa4a24d3367f",
    "metadata": {},
    "outputs": [
@@ -694,7 +804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 25,
    "id": "dd52e130-3db6-4bac-a2f1-f516fb21300c",
    "metadata": {},
    "outputs": [
@@ -739,7 +849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 26,
    "id": "e78afa9c-b329-4b60-954d-21a1fef397b3",
    "metadata": {},
    "outputs": [],
@@ -768,7 +878,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 27,
    "id": "64f74378-e329-418f-89f3-82967f58eebf",
    "metadata": {},
    "outputs": [],
@@ -821,7 +931,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 28,
    "id": "155efda7-9633-406d-9fd1-23ef739a541f",
    "metadata": {},
    "outputs": [],
@@ -902,7 +1012,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 29,
    "id": "a2e3cfa8-803c-4a54-ac40-5cc3fd6da0f3",
    "metadata": {},
    "outputs": [
@@ -939,7 +1049,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 32,
    "id": "adc03371-8306-4da6-810e-8434a8a77811",
    "metadata": {},
    "outputs": [
@@ -955,8 +1065,8 @@
       "==================================\u001b[1m Ai Message \u001b[0m==================================\n",
       "Name: stock_researcher\n",
       "Tool Calls:\n",
-      "  get_historical_stock_data (c5896a42-ecae-45e0-a8a7-95074c6a6553)\n",
-      " Call ID: c5896a42-ecae-45e0-a8a7-95074c6a6553\n",
+      "  get_historical_stock_data (beb59bde-e515-47de-8f8c-7896339344a8)\n",
+      " Call ID: beb59bde-e515-47de-8f8c-7896339344a8\n",
       "  Args:\n",
       "    ticker_symbol: NVDA\n",
       "=================================\u001b[1m Tool Message \u001b[0m=================================\n",
@@ -972,8 +1082,8 @@
       "==================================\u001b[1m Ai Message \u001b[0m==================================\n",
       "Name: chart_generator\n",
       "Tool Calls:\n",
-      "  plot_chart (a6e9a0df-0ad8-462d-a473-a1c841a1073f)\n",
-      " Call ID: a6e9a0df-0ad8-462d-a473-a1c841a1073f\n",
+      "  plot_chart (e62c37a3-b536-44d3-a1fa-6980e70ee17d)\n",
+      " Call ID: e62c37a3-b536-44d3-a1fa-6980e70ee17d\n",
       "  Args:\n",
       "    key: NVDA\n"
      ]
@@ -1026,12 +1136,7 @@
     ")\n",
     "\n",
     "for chunk in events:\n",
-    "    chunk[\"messages\"][-1].pretty_print()\n",
-    "\n",
-    "# for s in events:\n",
-    "#     print(s)\n",
-    "#     print(\"----\")\n",
-    "        "
+    "    chunk[\"messages\"][-1].pretty_print()"
    ]
   },
   {
